[package]
name = "axol-http"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "=0.2.9"
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
futures = "0.3"
lazy_static = "1.4"
headers = "0.3"
anyhow = "1.0"
bytes = "1.4"

[features]
default = ["serde"]
serde = ["dep:serde"]
