[package]
name = "axol"
version = "0.1.0"
edition = "2021"

[dependencies]
axol-http = { version = "0.1", path = "../axol-http", features = ["serde"] }

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
form_urlencoded = "1.0"
serde_path_to_error = "0.1"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14.24", features = ["stream", "server", "tcp", "runtime", "http1", "http2"] }
tokio = { version = "1.25.0", features = ["time"] }
async-trait = "0.1"
url = "2.4"
anyhow = "1.0"
lazy_static = "1.4"
derive_builder = "0.12"
pin-project-lite = "0.2.10"
percent-encoding = "2.3"
strum = { version = "0.25", features = ["derive"] }

base64 = { version = "0.21.0", optional = true }
sha1 = { version = "0.10", optional = true }
tokio-tungstenite = { version = "0.19", optional = true }

rustls = { version = "0.20", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.25.0", features = ["full"] }

[features]
default = ["ws", "tls"]
ws = ["tokio-tungstenite", "sha1", "base64"]
tls = ["rustls", "tokio-rustls", "tokio-stream"]
