[package]
name = "axol"
version = "0.1.3"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Protryon/axol"
description = "Axol Web Framework"
keywords = [ "http", "web", "framework" ]

[dependencies]
axol-http = { version = "0.1.2", path = "../axol-http", features = ["serde"] }

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
form_urlencoded = "1.0"
serde_path_to_error = "0.1"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "0.14.24", features = ["stream", "server", "tcp", "runtime", "http1", "http2"] }
tokio = { version = "1.25.0", features = ["time"] }
async-trait = "0.1"
url = "2.4"
anyhow = "1.0"
lazy_static = "1.4"
derive_builder = "0.12"
pin-project-lite = "0.2.10"
percent-encoding = "2.3"
strum = { version = "0.25", features = ["derive"] }
bytes = "1.4"

base64 = { version = "0.21.0", optional = true }
sha1 = { version = "0.10", optional = true }
tokio-tungstenite = { version = "0.19", optional = true }

rustls = { version = "0.20", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-stream = { version = "0.1", optional = true }

multer = { version = "2.1", optional = true }

prost = { version = "0.11", optional = true }

tracing = { version = "0.1", optional = true }

opentelemetry = { version = "0.19.0", optional = true }
opentelemetry_api = { version = "0.19.0", optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }
tracing-futures = { version = "0.2", optional = true, features = ["futures-03"] }
tracing-subscriber = { version = "0.3", optional = true }
tracing-core = { version = "0.1", optional = true }

cookie = { package = "cookie", version = "0.17", features = ["percent-encode"], optional = true }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }

[features]
default = ["ws", "tls", "multipart", "grpc", "trace", "cookie"]
ws = ["tokio-tungstenite", "sha1", "base64"]
tls = ["rustls", "tokio-rustls", "tokio-stream"]
multipart = ["multer"]
grpc = ["base64", "prost"]
trace = ["tracing", "axol-http/otel", "opentelemetry_api", "tracing-opentelemetry", "tracing-futures", "opentelemetry", "tracing-subscriber", "tracing-core"]
cookie = ["dep:cookie"]
